--- a/StowAway/Base.lproj/Main.storyboard
+++ b/StowAway/Base.lproj/Main.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="PST-0O-nWs">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--Reveal View Controller-->
@@ -1147,7 +1146,7 @@
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7XM-fk-vcd">
                                 <rect key="frame" x="142" y="231" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="F58A7749-2139-403B-97D6-79F9B66EEE47" colorSpace="pattern"/>
+                                <color key="color" patternImage="F009623C-9FF6-4B14-B03C-2538373A23CD" colorSpace="pattern"/>
                             </activityIndicatorView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="find-crew-wood.png" translatesAutoresizingMaskIntoConstraints="NO" id="rIt-U9-bXz">
                                 <rect key="frame" x="0.0" y="424" width="320" height="56"/>
@@ -1251,18 +1250,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UOo-wz-ltX">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UOo-wz-ltX">
+                                <rect key="frame" x="0.0" y="78" width="320" height="402"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OMK-dH-4l8">
-                                <rect key="frame" x="118" y="391" width="182" height="33"/>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OMK-dH-4l8">
+                                <rect key="frame" x="118" y="416" width="182" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.25882352939999997" green="0.62745098040000002" blue="0.66274509800000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="OMK-dH-4l8" secondAttribute="height" multiplier="163:33" constant="19" id="AgP-zd-vRP"/>
-                                    <constraint firstAttribute="height" constant="33" id="dKE-OO-wgx"/>
-                                    <constraint firstAttribute="width" constant="182" id="qv1-VZ-dJV"/>
+                                    <constraint firstAttribute="width" constant="182" id="bBQ-HZ-c16"/>
+                                    <constraint firstAttribute="height" constant="33" id="jj2-p9-uM0"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Got it, now lets ride >>">
@@ -1275,8 +1273,12 @@
                         </subviews>
                         <color key="backgroundColor" red="0.47843137250000001" green="0.78039215689999997" blue="0.81176470590000005" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="APb-TV-FZg" firstAttribute="top" secondItem="OMK-dH-4l8" secondAttribute="bottom" constant="56" id="Dkq-sI-JeM"/>
-                            <constraint firstAttribute="trailing" secondItem="OMK-dH-4l8" secondAttribute="trailing" constant="20" id="IRZ-Pb-jU9"/>
+                            <constraint firstItem="UOo-wz-ltX" firstAttribute="top" secondItem="rtd-pw-4je" secondAttribute="bottom" constant="58" id="EfU-Zz-05T"/>
+                            <constraint firstItem="UOo-wz-ltX" firstAttribute="leading" secondItem="9R1-yX-RWb" secondAttribute="leading" id="FAR-hz-sOv"/>
+                            <constraint firstAttribute="trailing" secondItem="UOo-wz-ltX" secondAttribute="trailing" id="T1d-TV-cKZ"/>
+                            <constraint firstAttribute="bottom" secondItem="UOo-wz-ltX" secondAttribute="bottom" id="UO3-I8-MwX"/>
+                            <constraint firstItem="APb-TV-FZg" firstAttribute="top" secondItem="OMK-dH-4l8" secondAttribute="bottom" constant="31" id="dFS-NR-x4x"/>
+                            <constraint firstAttribute="trailing" secondItem="OMK-dH-4l8" secondAttribute="trailing" constant="20" id="pIH-Ag-DGC"/>
                         </constraints>
                     </view>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
@@ -1408,7 +1410,7 @@
                                     <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="U5Q-XR-sJo">
                                         <rect key="frame" x="135" y="65" width="37" height="37"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="color" patternImage="06968A50-2EB6-40DF-ABF4-1138DB6AD83E" colorSpace="pattern"/>
+                                        <color key="color" patternImage="828221DA-00DE-4513-AB54-AC43C5DBFDA3" colorSpace="pattern"/>
                                     </activityIndicatorView>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="0.99502558297574695" blue="0.92248104749216908" alpha="1" colorSpace="calibratedRGB"/>
@@ -1722,7 +1724,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="06968A50-2EB6-40DF-ABF4-1138DB6AD83E" width="320" height="460">
+        <image name="828221DA-00DE-4513-AB54-AC43C5DBFDA3" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -11609,7 +11611,7 @@ CQq/AAkKxAAJCswACQrPAAkK1AAJCtwACQrfAAkK8QAJCvQACQr5AAAAAAAABAEAAAAAAAAAQgAAAAAA
 AAAAAAAAAAAJCvs
 </mutableData>
         </image>
-        <image name="F58A7749-2139-403B-97D6-79F9B66EEE47" width="320" height="460">
+        <image name="F009623C-9FF6-4B14-B03C-2538373A23CD" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
