--- a/StowAway/Base.lproj/Main.storyboard
+++ b/StowAway/Base.lproj/Main.storyboard
@@ -1146,7 +1146,7 @@
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7XM-fk-vcd">
                                 <rect key="frame" x="142" y="231" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="F009623C-9FF6-4B14-B03C-2538373A23CD" colorSpace="pattern"/>
+                                <color key="color" patternImage="EDF9D996-7F09-444C-B220-AD79F79F7C7B" colorSpace="pattern"/>
                             </activityIndicatorView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="find-crew-wood.png" translatesAutoresizingMaskIntoConstraints="NO" id="rIt-U9-bXz">
                                 <rect key="frame" x="0.0" y="424" width="320" height="56"/>
@@ -1410,7 +1410,7 @@
                                     <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="U5Q-XR-sJo">
                                         <rect key="frame" x="135" y="65" width="37" height="37"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="color" patternImage="828221DA-00DE-4513-AB54-AC43C5DBFDA3" colorSpace="pattern"/>
+                                        <color key="color" patternImage="A18A8A29-3FB2-4C33-8519-8AB08A504532" colorSpace="pattern"/>
                                     </activityIndicatorView>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="0.99502558297574695" blue="0.92248104749216908" alpha="1" colorSpace="calibratedRGB"/>
@@ -1594,16 +1594,19 @@
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YOU ARE THE CAPTAIN !" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h9f-xG-jNI">
                                         <rect key="frame" x="55" y="0.0" width="211" height="23"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="23" id="0fd-Ue-Mfy"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                         <color key="textColor" red="0.25882352939999997" green="0.62745098040000002" blue="0.66274509800000003" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wbI-CF-6jc">
-                                        <rect key="frame" x="123" y="94" width="75" height="23"/>
+                                        <rect key="frame" x="123" y="96" width="75" height="23"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="75" id="H6Z-hb-Tee"/>
-                                            <constraint firstAttribute="height" constant="23" id="r1t-b1-8kR"/>
+                                            <constraint firstAttribute="height" constant="23" id="AAs-LK-cZK"/>
+                                            <constraint firstAttribute="width" constant="75" id="ZRd-G8-zOt"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <state key="normal" title="Cancel Ride">
@@ -1615,17 +1618,23 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Crew will be at the pick up point in about " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iYW-6K-YxY">
-                                        <rect key="frame" x="19" y="20" width="242" height="23"/>
+                                        <rect key="frame" x="19" y="17" width="242" height="24"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="But we are still crediting you 50% of this ride's cost." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3ya-ka-WYm">
+                                        <rect key="frame" x="6" y="32" width="309" height="24"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5je-TY-sUW">
-                                        <rect key="frame" x="60" y="51" width="201" height="35"/>
+                                        <rect key="frame" x="60" y="56" width="201" height="35"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" red="0.25882352939999997" green="0.62745098040000002" blue="0.66274509800000003" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="35" id="qro-25-Br6"/>
+                                            <constraint firstAttribute="height" constant="35" id="Jyc-ky-f34"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                         <state key="normal" title="Order UberX Now">
@@ -1641,11 +1650,11 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tgI-pd-3os">
-                                        <rect key="frame" x="252" y="22" width="48" height="19"/>
+                                        <rect key="frame" x="252" y="20" width="48" height="19"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="48" id="9sx-Zw-Ncn"/>
-                                            <constraint firstAttribute="height" constant="19" id="ST7-Nt-6Xo"/>
+                                            <constraint firstAttribute="width" constant="48" id="QfD-Pt-tiG"/>
+                                            <constraint firstAttribute="height" constant="19" id="zDu-Dz-dF6"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                         <nil key="highlightedColor"/>
@@ -1653,22 +1662,25 @@
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="0.99502558299999999" blue="0.92248104750000004" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="5je-TY-sUW" firstAttribute="centerX" secondItem="h9f-xG-jNI" secondAttribute="centerX" id="1En-KP-IrD"/>
-                                    <constraint firstItem="iYW-6K-YxY" firstAttribute="leading" secondItem="jTt-2d-ddP" secondAttribute="leading" constant="19" id="2Zb-io-zdW"/>
-                                    <constraint firstItem="iYW-6K-YxY" firstAttribute="trailing" secondItem="5je-TY-sUW" secondAttribute="trailing" id="ItF-dC-3A3"/>
-                                    <constraint firstItem="h9f-xG-jNI" firstAttribute="leading" secondItem="jTt-2d-ddP" secondAttribute="leading" constant="55" id="UKp-4V-yLe"/>
-                                    <constraint firstItem="5je-TY-sUW" firstAttribute="top" secondItem="h9f-xG-jNI" secondAttribute="bottom" constant="28" id="Wbq-Rv-88a"/>
-                                    <constraint firstItem="iYW-6K-YxY" firstAttribute="top" secondItem="jTt-2d-ddP" secondAttribute="top" constant="20" symbolic="YES" id="aeL-Nc-xVr"/>
-                                    <constraint firstItem="iYW-6K-YxY" firstAttribute="centerY" secondItem="tgI-pd-3os" secondAttribute="centerY" id="b3K-14-wBj"/>
-                                    <constraint firstItem="5je-TY-sUW" firstAttribute="centerX" secondItem="wbI-CF-6jc" secondAttribute="centerX" id="bBO-FC-6g5"/>
-                                    <constraint firstItem="wbI-CF-6jc" firstAttribute="top" secondItem="5je-TY-sUW" secondAttribute="bottom" constant="8" symbolic="YES" id="bD1-Rf-J6o"/>
-                                    <constraint firstItem="5je-TY-sUW" firstAttribute="top" secondItem="tgI-pd-3os" secondAttribute="bottom" constant="10" id="gQk-WX-u1u"/>
-                                    <constraint firstItem="h9f-xG-jNI" firstAttribute="centerX" secondItem="jTt-2d-ddP" secondAttribute="centerX" id="k1d-hr-SQd"/>
-                                    <constraint firstItem="5je-TY-sUW" firstAttribute="leading" secondItem="jTt-2d-ddP" secondAttribute="leading" constant="60" id="mx1-Gn-6Db"/>
-                                    <constraint firstAttribute="trailing" secondItem="tgI-pd-3os" secondAttribute="trailing" constant="20" symbolic="YES" id="oXs-aD-MK7"/>
-                                    <constraint firstItem="h9f-xG-jNI" firstAttribute="top" secondItem="jTt-2d-ddP" secondAttribute="top" id="qdx-0L-P96"/>
-                                    <constraint firstAttribute="bottom" secondItem="wbI-CF-6jc" secondAttribute="bottom" id="tIe-AR-9CW"/>
-                                    <constraint firstItem="5je-TY-sUW" firstAttribute="top" secondItem="iYW-6K-YxY" secondAttribute="bottom" constant="8" symbolic="YES" id="xMp-wu-Ms7"/>
+                                    <constraint firstItem="h9f-xG-jNI" firstAttribute="leading" secondItem="jTt-2d-ddP" secondAttribute="leading" constant="55" id="2Ms-Ja-49x"/>
+                                    <constraint firstItem="h9f-xG-jNI" firstAttribute="centerX" secondItem="3ya-ka-WYm" secondAttribute="centerX" id="3e8-I8-n1w"/>
+                                    <constraint firstItem="5je-TY-sUW" firstAttribute="leading" secondItem="jTt-2d-ddP" secondAttribute="leading" constant="60" id="CcA-Zy-he9"/>
+                                    <constraint firstItem="h9f-xG-jNI" firstAttribute="top" secondItem="jTt-2d-ddP" secondAttribute="top" id="Co9-26-jto"/>
+                                    <constraint firstItem="5je-TY-sUW" firstAttribute="top" secondItem="iYW-6K-YxY" secondAttribute="bottom" constant="15" id="FOh-4Q-QkX"/>
+                                    <constraint firstItem="wbI-CF-6jc" firstAttribute="top" secondItem="5je-TY-sUW" secondAttribute="bottom" constant="5" id="GNb-VN-dO3"/>
+                                    <constraint firstItem="5je-TY-sUW" firstAttribute="trailing" secondItem="iYW-6K-YxY" secondAttribute="trailing" id="Q77-du-nHR"/>
+                                    <constraint firstItem="tgI-pd-3os" firstAttribute="top" secondItem="jTt-2d-ddP" secondAttribute="top" constant="20" symbolic="YES" id="RG3-Dl-nes"/>
+                                    <constraint firstAttribute="bottom" secondItem="wbI-CF-6jc" secondAttribute="bottom" constant="-2" id="Rk1-kj-hYU"/>
+                                    <constraint firstItem="3ya-ka-WYm" firstAttribute="top" secondItem="h9f-xG-jNI" secondAttribute="bottom" constant="9" id="TC9-9I-sF3"/>
+                                    <constraint firstItem="3ya-ka-WYm" firstAttribute="leading" secondItem="jTt-2d-ddP" secondAttribute="leading" constant="6" id="UVo-nH-hDt"/>
+                                    <constraint firstItem="5je-TY-sUW" firstAttribute="top" secondItem="3ya-ka-WYm" secondAttribute="bottom" id="VnA-Dq-yoa"/>
+                                    <constraint firstAttribute="trailing" secondItem="tgI-pd-3os" secondAttribute="trailing" constant="20" symbolic="YES" id="Wvs-Ry-iyV"/>
+                                    <constraint firstItem="wbI-CF-6jc" firstAttribute="centerX" secondItem="5je-TY-sUW" secondAttribute="centerX" id="XFx-wr-jhh"/>
+                                    <constraint firstItem="5je-TY-sUW" firstAttribute="top" secondItem="tgI-pd-3os" secondAttribute="bottom" constant="17" id="a4d-ai-NDU"/>
+                                    <constraint firstItem="3ya-ka-WYm" firstAttribute="centerX" secondItem="jTt-2d-ddP" secondAttribute="centerX" id="cCT-0G-32V"/>
+                                    <constraint firstItem="iYW-6K-YxY" firstAttribute="leading" secondItem="jTt-2d-ddP" secondAttribute="leading" constant="19" id="hIX-x2-e7A"/>
+                                    <constraint firstItem="tgI-pd-3os" firstAttribute="centerY" secondItem="iYW-6K-YxY" secondAttribute="centerY" id="vyJ-1d-53b"/>
+                                    <constraint firstItem="5je-TY-sUW" firstAttribute="centerX" secondItem="3ya-ka-WYm" secondAttribute="centerX" id="x1t-1s-dyM"/>
                                 </constraints>
                             </view>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tgW-3p-ARV">
@@ -1711,6 +1723,7 @@
                         <outlet property="imageView2" destination="Z5h-71-TdY" id="ppi-ts-X9D"/>
                         <outlet property="imageView3" destination="Pbp-PP-ETC" id="pNr-DA-7kd"/>
                         <outlet property="instructionsLabel" destination="iYW-6K-YxY" id="DZH-hf-IoP"/>
+                        <outlet property="loneRiderText" destination="3ya-ka-WYm" id="t0X-2s-RaH"/>
                         <outlet property="mapView" destination="tgW-3p-ARV" id="iBc-sC-td3"/>
                         <outlet property="nameLabel1" destination="HdJ-nX-eLV" id="Rpf-u0-yDm"/>
                         <outlet property="nameLabel2" destination="afP-PJ-LW9" id="cDw-yq-NPq"/>
@@ -1724,7 +1737,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="828221DA-00DE-4513-AB54-AC43C5DBFDA3" width="320" height="460">
+        <image name="A18A8A29-3FB2-4C33-8519-8AB08A504532" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -11611,7 +11624,7 @@ CQq/AAkKxAAJCswACQrPAAkK1AAJCtwACQrfAAkK8QAJCvQACQr5AAAAAAAABAEAAAAAAAAAQgAAAAAA
 AAAAAAAAAAAJCvs
 </mutableData>
         </image>
-        <image name="F009623C-9FF6-4B14-B03C-2538373A23CD" width="320" height="460">
+        <image name="EDF9D996-7F09-444C-B220-AD79F79F7C7B" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
