--- a/StowAway/Base.lproj/Main.storyboard
+++ b/StowAway/Base.lproj/Main.storyboard
@@ -1146,7 +1146,7 @@
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7XM-fk-vcd">
                                 <rect key="frame" x="142" y="231" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="EDF9D996-7F09-444C-B220-AD79F79F7C7B" colorSpace="pattern"/>
+                                <color key="color" patternImage="84BC5612-F641-4A7F-B7B3-86F46EA26775" colorSpace="pattern"/>
                             </activityIndicatorView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="find-crew-wood.png" translatesAutoresizingMaskIntoConstraints="NO" id="rIt-U9-bXz">
                                 <rect key="frame" x="0.0" y="424" width="320" height="56"/>
@@ -1410,7 +1410,7 @@
                                     <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="U5Q-XR-sJo">
                                         <rect key="frame" x="135" y="65" width="37" height="37"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="color" patternImage="A18A8A29-3FB2-4C33-8519-8AB08A504532" colorSpace="pattern"/>
+                                        <color key="color" patternImage="54ADA363-0F40-40BA-A76C-50A4E258A0D5" colorSpace="pattern"/>
                                     </activityIndicatorView>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="0.99502558297574695" blue="0.92248104749216908" alpha="1" colorSpace="calibratedRGB"/>
@@ -1728,6 +1728,7 @@
                         <outlet property="nameLabel1" destination="HdJ-nX-eLV" id="Rpf-u0-yDm"/>
                         <outlet property="nameLabel2" destination="afP-PJ-LW9" id="cDw-yq-NPq"/>
                         <outlet property="nameLabel3" destination="peZ-RB-qzZ" id="EnP-qb-86h"/>
+                        <outlet property="navigationBarItem" destination="JNc-or-wIT" id="yOX-EF-FYV"/>
                         <outlet property="requestUberButton" destination="5je-TY-sUW" id="Fwf-jR-hPk"/>
                     </connections>
                 </viewController>
@@ -1737,7 +1738,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="A18A8A29-3FB2-4C33-8519-8AB08A504532" width="320" height="460">
+        <image name="54ADA363-0F40-40BA-A76C-50A4E258A0D5" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -11624,7 +11625,7 @@ CQq/AAkKxAAJCswACQrPAAkK1AAJCtwACQrfAAkK8QAJCvQACQr5AAAAAAAABAEAAAAAAAAAQgAAAAAA
 AAAAAAAAAAAJCvs
 </mutableData>
         </image>
-        <image name="EDF9D996-7F09-444C-B220-AD79F79F7C7B" width="320" height="460">
+        <image name="84BC5612-F641-4A7F-B7B3-86F46EA26775" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
